# verification-microservices

./: .gitignore  CLAUDE.md
.claude/: settings.local.json
verify-ppb/: README.md
verify-ppb/facilities/: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  gunicorn.conf.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.py
verify-ppb/facilities/.github/: PULL_REQUEST_TEMPLATE.md
verify-ppb/facilities/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
verify-ppb/facilities/.github/workflows/: ci.yml
verify-ppb/facilities/src/: __init__.py  app.py
verify-ppb/facilities/src/adapters/: __init__.py  cache_redis.py  cache_simple.py  http.py
verify-ppb/facilities/src/api/: __init__.py  errors.py  routes.py
verify-ppb/facilities/src/core/: __init__.py  config.py  logger.py  version.py
verify-ppb/facilities/src/models/: __init__.py  schemas.py
verify-ppb/facilities/src/services/: __init__.py  ppb_service.py
verify-ppb/facilities/tests/: test_direct.py  test_superintendent_fix.py  test_verification.py
verify-ppb/pharmacists/: .editorconfig  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  gunicorn.conf.py  pytest.ini  requirements-dev.txt  run.py
verify-ppb/pharmacists/src/: __init__.py  app.py
verify-ppb/pharmtechs/: .env.example  .gitignore  Dockerfile  Makefile  NEXT-TASK.md  README.md  docker-compose.yml  gunicorn.conf.py  pytest.ini  requirements-dev.txt  requirements.txt  run.py
verify-ppb/pharmtechs/src/: app.py  (+1 more)
(+39 files in other folders)
